deploy-test/test-deployment-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  namespace: test-ingress-alb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - name: app-2048
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: test-ingress-alb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-2048
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
